# fusesoc

./: .pre-commit-config.yaml  NEWS  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/source/user/build_system/: dependencies.rst
doc/source/user/package_manager/: index.rst
fusesoc/: config.py  core.py  coremanager.py  edalizer.py  fusesoc.py  main.py  vlnv.py
fusesoc/capi2/: core.py  core_handle.py  exprs.py  flags.py  generator.py  inheritance.py
fusesoc/capi2/schema/: common.py  core.py  fileset.py  providers.py  target.py
tests/: test_config.py  test_coremanager.py  test_edalizer.py  test_exprs.py  test_libraries.py  test_provider.py  test_usecases.py  test_vlnv.py
tests/capi2_cores/hooks_collision/: child.core  parent.core
