[build-system]
requires = ["setuptools>=64", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "fusesoc"
description = "Award-winnning package manager and build abstraction tool for HDL code"
readme = "README.md"
authors = [
  {name = "Olof Kindgren", email = "olof@award-winning.me"},
]
maintainers = [
  {name = "Olof Kindgren", email = "olof@award-winning.me"},
]

keywords=["VHDL", "verilog", "hdl", "rtl", "synthesis", "FPGA", "simulation", "ASIC"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Utilities",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
]

dynamic = ["version"]

dependencies = [
  "edalize>=0.4.1",
  "pyparsing>=3.0.0",
  "pyyaml>=6.0",
  "pydantic>=2.13.3",
  "simplesat>=0.9.1",
  "fastjsonschema",
  "argcomplete",
]
requires-python = ">=3.10, <4"

[project.urls]
Homepage = "https://fusesoc.net"
Documentation = "https://fusesoc.readthedocs.io"
Repository = "https://github.com/olofk/fusesoc"
Issues = "https://github.com/olofk/fusesoc/issues"
Changelog = "https://github.com/olofk/fusesoc/blob/main/NEWS"

[tool.setuptools_scm]
write_to = "fusesoc/version.py"

[tool.setuptools.packages.find]
include = [
  "fusesoc",
  "fusesoc.capi2",
  "fusesoc.capi2.schema",
  "fusesoc.provider",
  "fusesoc.parser",
  "fusesoc.filters",
]

[project.scripts]
fusesoc = "fusesoc.main:main"

[tool.pytest.ini_options]
markers = [
    "network: test requires network access.",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3

[testenv]
deps = pytest
commands = pytest
"""

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py310"

[tool.mypy]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
files = ["fusesoc/capi2/"]

[[tool.mypy.overrides]]
module = [
  "yaml",
  "okonomiyaki.*",
  "fastjsonschema",
  "argcomplete",
  "simplesat.*",
  "edalize.*",
  "pyparsing",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "fusesoc.utils",
  "fusesoc.signature",
  "fusesoc.vlnv",
  "fusesoc.provider.*",
  "fusesoc.parser.*",
  "fusesoc.coremanager",
  "fusesoc.config",
  "fusesoc.librarymanager",
  "fusesoc.fusesoc",
  "fusesoc.core",
]
follow_imports = "silent"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["fusesoc/capi2/"]
